update to first Numpy lecture + figure 1.4

--- a/seccion_01_numpy/01.01_introduccion_a_numpy.ipynb
+++ b/seccion_01_numpy/01.01_introduccion_a_numpy.ipynb
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c0f40b6",
+   "id": "9b07c090",
    "metadata": {},
    "source": [
     "Todos los arreglos en **Numpy** cuentan con ciertos atributos, que ya veremos en detalle un poco más adelante. Uno de ellos es `shape`, que permite imprimir en pantalla la geometría de un arreglo determinado. Por ejemplo, si introducimos el código `A.shape`, el resultado será `(4, 4)`, que es sin duda la geometría del arreglo `A`. Sin embargo, si tratamos de hacer lo mismo con `v`:"
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7b6f32af",
+   "id": "d067d879",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f959b92",
+   "id": "9ac954b7",
    "metadata": {},
    "source": [
     "Vemos pues que la geometría del arreglo `v` es `(5,)`. Es decir, fiel a su representación gráfica, un arreglo 1D tiene una única dimensión. Sin embargo, pareciera que esto es cierto únicamente para los arreglos que representan una única fila. Si construimos una matriz columna, digamos"
@@ -458,8 +458,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "9df74da2",
+   "execution_count": 13,
+   "id": "1b48db42",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff68e4d6",
+   "id": "cf25e845",
    "metadata": {},
    "source": [
     "Entonces notaremos que este arreglo no es realmente unidimensional, ya que al consultar su atributo `shape`, obtenemos"
@@ -495,8 +495,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "178301ce",
+   "execution_count": 14,
+   "id": "69d31b62",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
        "(5, 1)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41bae254",
+   "id": "6298c1f0",
    "metadata": {},
    "source": [
     "¿Por qué ocurre esto? Bueno, si consultamos nuevamente el esquema de la Fig. (1.1), nos daremos cuenta que todo arreglo que tenga al menos una columna con más de un valor, será tal que el eje 0 se trazará en la dirección de dicha columna. Por lo tanto, una matriz columna en **Numpy** es, de hecho, un arreglo bidimensional. En el caso de `w`, la geometría de este arreglo es `(5, 1)`, y no únicamente `(5,)` (o `(, 5)`, como podríamos llegar a concluir a partir de simple lógica), lo que reafirma este hecho.\n",
@@ -526,8 +526,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "badbeafd",
+   "execution_count": 15,
+   "id": "2d482760",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33945748",
+   "id": "9213b363",
    "metadata": {},
    "source": [
     "Si consultamos por la geometría de `u`, obtendremos"
@@ -553,8 +553,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "262b2daa",
+   "execution_count": 16,
+   "id": "6c37890b",
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
        "(1, 5)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d906acd",
+   "id": "e7df2e1c",
    "metadata": {},
    "source": [
     "Es decir, `u` es también bidimensional. A nivel de sintaxis, hay claras diferencias entre como construimos estos arreglos. En el siguiente bloque de código, dejaremos escritas las imputaciones de cada uno de estos arreglos a fin de entender cómo se diferencian. No obstante, es importante recordar que los arreglos unidimensionales no son matrices fila ni matrices columna. Son simplemente eso, arreglos unidimensionales. Con sus propias reglas, ventajas y limitaciones."
@@ -582,8 +582,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "fe13d629",
+   "execution_count": 17,
+   "id": "21007966",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +595,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "1d8aecc4",
+   "id": "a1a7b561",
    "metadata": {},
    "source": [
     "## Rutinas de creación de arreglos.\n",
@@ -610,8 +610,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "46881d10",
+   "execution_count": 18,
+   "id": "44738512",
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
        "array([0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84f3910f",
+   "id": "c44c9c42",
    "metadata": {},
    "source": [
     "Si, en vez de un único número entero, imputamos una tupla con dos o más enteros (digamos `(i, j, k, …)`) como argumento en la función `np.zeros()`, lo que obtendremos como resultado será un arreglo multidimensional (de dimensión `(i, j, k, …)`). Luego tendremos,"
@@ -640,8 +640,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "6bfb8615",
+   "execution_count": 19,
+   "id": "5ac96b53",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
        "       [0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,8 +666,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "432e9721",
+   "execution_count": 20,
+   "id": "49553e6d",
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
        "        [0., 0., 0., 0.]]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f5accbe",
+   "id": "962f2c8f",
    "metadata": {},
    "source": [
     "Toda rutina de creación de arreglos permite especificar el tipo de dato que caracteriza a sus entradas. Los arreglos de **Numpy** siempre tienen el mismo tipo de dato, y podemos especificarlo siempre mediante el argumento `dtype` en este tipo de rutinas:"
@@ -707,8 +707,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "a3cd372c",
+   "execution_count": 21,
+   "id": "cef52277",
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
        "       [0, 0, 0, 0]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b198f8d5",
+   "id": "d530f8db",
    "metadata": {},
    "source": [
     "Vemos pues que lo que hemos obtenido mediante la imputación del argumento `dtype=int` es un arreglo cuyos elementos son del tipo entero, el cual es un tipo de dato nativo de Python. **Numpy** maneja sus propios tipos de datos, los que veremos más adelante. Dentro de tales tipos, incluso podemos construir arreglos con entradas cuyos valores sean números complejos, siendo este tipo de dato especificable mediante la variable `np.complex128` (que hace referencia a números complejos compuestos por dos números de punto flotante, cada uno de 64 bits):"
@@ -741,8 +741,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "92942965",
+   "execution_count": 22,
+   "id": "82062459",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
        "       [0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d720676c",
+   "id": "2869a000",
    "metadata": {},
    "source": [
     "En el bloque anterior, el valor `0.+0.j` equivale, matemáticamente, al número complejo $(0,0)=0+0i\\in\\mathbb{C}$, que por supuesto es el elemento nulo del cuerpo $\\mathbb{C}$ de los números complejos. El uso de la letra `j`, en vez de la `i`, para especificar la componente imaginaria de un número complejo en **Numpy** es heredada de la Física, donde se usa la `j` fundamentalmente porque la `i` es utilizada para denotar la intensidad de corriente eléctrica. ◼︎\n",
@@ -777,8 +777,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "8aba9363",
+   "execution_count": 23,
+   "id": "3dd246e0",
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +790,7 @@
        "       [1, 1, 1, 1, 1, 1]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "489601c3",
+   "id": "46e90f0b",
    "metadata": {},
    "source": [
     "◼︎\n",
@@ -812,8 +812,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "8d39f369",
+   "execution_count": 24,
+   "id": "372d457f",
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +826,7 @@
        "       [9, 9, 9, 9, 9]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +839,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "6e144abc",
+   "id": "19158f80",
    "metadata": {},
    "source": [
     "◼︎\n",
@@ -861,8 +861,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "cbc4361c",
+   "execution_count": 25,
+   "id": "6b869f61",
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
        "       [0., 0., 0., 0., 1., 0.]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,8 +887,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "91f46078",
+   "execution_count": 26,
+   "id": "32687c4f",
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +900,7 @@
        "       [0., 0., 0., 0., 1., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "888835c0",
+   "id": "06fd6326",
    "metadata": {},
    "source": [
     "Por otro lado, la construcción de arreglos que emulan una matriz identidad también es sencilla. Para ello, bastará con utilizar la función `np.identity()`, la cual tiene un único argumento obligatorio, que corresponde a `n`, y que representa el número de filas y columnas que tendrá este arreglo (recordemos que la matriz identidad es cuadrada, tiene el mismo número de filas y columnas):"
@@ -920,8 +920,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "491770a2",
+   "execution_count": 27,
+   "id": "99882b8f",
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +935,7 @@
        "       [0., 0., 0., 0., 0., 1.]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fbc59b1",
+   "id": "3e0baf95",
    "metadata": {},
    "source": [
     "Como en los ejemplos anteriores, las funciones `np.eye()` y `np.identity()` también permiten especificar el tipo de dato que poblará nuestro arreglo mediante el argumento dtype. Ya veremos en detalle los tipos de datos que se permiten en **Numpy**. ◼︎\n",
@@ -958,8 +958,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "347d9f07",
+   "execution_count": 28,
+   "id": "aec1c2fb",
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +968,7 @@
        "array([ 1,  3,  5,  7,  9, 11, 13, 15, 17, 19])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff5c9971",
+   "id": "2b229bf8",
    "metadata": {},
    "source": [
     "La función `np.arange()`, por cierto, sólo crea arreglos con números enteros.\n",
@@ -990,8 +990,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "29e36d17",
+   "execution_count": 29,
+   "id": "e5d0a6d5",
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1000,7 @@
        "array([100,  90,  80,  70,  60,  50,  40,  30,  20,  10])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8892903",
+   "id": "7566108a",
    "metadata": {},
    "source": [
     "Notemos que `np.arange()` debe leerse de la siguiente manera: *“Construir un rango desde start hasta antes de stop, de paso* `step`”. Por esa razón es que los arreglos resultantes del uso de esta función no contemplan la inclusión del valor `stop`, sino que el valor anterior anterior a él, conforme el paso que hemos definido previamente:"
@@ -1020,8 +1020,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "4baca562",
+   "execution_count": 30,
+   "id": "459093a3",
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1030,7 @@
        "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd1170ed",
+   "id": "04006422",
    "metadata": {},
    "source": [
     "Otra función útil para la construcción de arreglos es `np.linspace()`. Esta función es similar a `np.arange()`, pero además de los valores inicial y final del rango a construir, requiere como argumento el número de valores dentro del arreglo en vez del paso entre cada uno de los elementos del arreglo, el cual se define mediante el argumento `num`:"
@@ -1050,8 +1050,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "8b0576bb",
+   "execution_count": 31,
+   "id": "2ba32dac",
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1060,7 @@
        "array([0.  , 0.25, 0.5 , 0.75, 1.  ])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8de93f0",
+   "id": "72820b87",
    "metadata": {},
    "source": [
     "Notemos que, en el caso de `np.linspace()`, sí se incluye el valor de `stop` dentro del arreglo resultante. La construcción de rangos decrecientes es igualmente sencilla:"
@@ -1080,8 +1080,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "ea5e2c74",
+   "execution_count": 32,
+   "id": "771792b1",
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1090,7 @@
        "array([1.   , 0.875, 0.75 , 0.625, 0.5  , 0.375, 0.25 , 0.125, 0.   ])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,20 +1102,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "091cd328",
+   "id": "b2e3d8fa",
    "metadata": {},
    "source": [
     "◼︎\n",
     "\n",
     "**Ejemplo 1.6 – Creación de grillas:** Los intervalos son ejemplos de subconjunto de la recta real. Para casos de mayor dimensión, es posible considerar el producto cartesiano de dos intervalos lo que da como resultado una grilla o rectángulo. Esta idea es replicable para cualquier número de dimensiones, lo que da como resultado lo que en matemáticas se conoce como hiper-celda o hiper-intervalo: El producto cartesiano de $n$ intervalos $\\left[ a_{1},b_{1}\\right]  \\times \\left[ a_{2},b_{2}\\right]  \\times \\cdots \\times \\left[ a_{n},b_{n}\\right]$. En **Numpy**, podemos construir grillas de cualquier dimensión mediante el uso de la función `np.meshgrid()`, la cual requiere como entrada dos arreglos undimensionales que representen rangos o intervalos (por ejemplo, construidos ya sea mediante `np.arange()` o `np.linspace()`). El resultado de la función `np.meshgrid()` es una lista con dos arreglos, cada uno de los cuales replica el arreglo original respectivo tantas veces como elementos tenga dicho arreglo. Esto se ilustra en la Fig. (1.3).\n",
     "\n",
+    "![alt text](https://github.com/rquezadac/udd_data_analytics_lectures/blob/main/seccion_01_numpy/fig_1_3.png?raw=true \"Logo Title Text 1\")\n",
+    "<p style=\"text-align: center;\">Fig. (1.3): Esquema de la construcción de grillas bidimensionales</p>\n",
+    "\n",
     "A nivel de código, podemos escribir:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "bc9117db",
+   "execution_count": 34,
+   "id": "97f50981",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1130,7 +1133,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "7a2aca7c",
+   "id": "90f7b0b5",
    "metadata": {},
    "source": [
     "Repasemos el bloque de código anterior, a fin de entender lo que acabamos de hacer:\n",
@@ -1144,8 +1147,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "id": "bb8bde31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluación de una función sobre la grilla X, Y.\n",
+    "Z = np.exp(-(X**2 + Y**2))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5973201f",
+   "id": "9ec1308e",
    "metadata": {},
    "outputs": [],
    "source": []
