--- a/seccion_01_numpy/01.01_introduccion_a_numpy.ipynb
+++ b/seccion_01_numpy/01.01_introduccion_a_numpy.ipynb
@@ -385,7 +385,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "15e1a638",
    "metadata": {},
@@ -593,7 +592,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b8714d3f",
    "metadata": {},
@@ -837,7 +835,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "1a4f5393",
    "metadata": {},
@@ -1131,7 +1128,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a63d2580",
    "metadata": {},
@@ -1157,7 +1153,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3eda6e0d",
    "metadata": {},
@@ -1209,7 +1204,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a0ada6b8",
    "metadata": {},
@@ -1250,7 +1244,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b36f7b85",
    "metadata": {},
@@ -1286,7 +1279,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "91763d30",
    "metadata": {},
@@ -1306,7 +1298,7 @@
     {
      "data": {
       "text/plain": [
-       "Generator(PCG64) at 0x7FA4815729E0"
+       "Generator(PCG64) at 0x7FE18866A9E0"
       ]
      },
      "execution_count": 38,
@@ -1321,7 +1313,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e88772ac",
    "metadata": {},
@@ -1389,7 +1380,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6db113eb",
    "metadata": {},
@@ -1427,7 +1417,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "da1ba473",
    "metadata": {},
@@ -1471,7 +1460,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a1ebb9e9",
    "metadata": {},
@@ -1563,7 +1551,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "646434cb",
    "metadata": {},
@@ -1925,7 +1912,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5a307688",
    "metadata": {},
@@ -2372,7 +2358,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b2141cf7",
    "metadata": {},
@@ -2560,7 +2545,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9e093f0a",
    "metadata": {},
@@ -2627,7 +2611,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9ee70255",
    "metadata": {},
