third lcture ready for Numpy + more images

--- a/seccion_01_numpy/01.01_introduccion_a_numpy.ipynb
+++ b/seccion_01_numpy/01.01_introduccion_a_numpy.ipynb
@@ -1257,6 +1257,8 @@
     "\n",
     "Debido a que **Numpy** fue originalmente construido en C, los tipos de datos de **Numpy** resultan familiares para los usuarios de ese lenguaje (o FORTRAN, entre otros). Tales tipos son también muy símiles a los que podemos encontrar, parcialmente, en el backend nativo de Python, y se detallan en la Tabla (1.1).\n",
     "\n",
+    "<p style=\"text-align: center;\">Tabla (1.1): Tipos de datos propios de Numpy</p>\n",
+    "\n",
     "| Tipo         | Descripción |\n",
     "| ------------ | ----------- |\n",
     "| `bool`       | Booleano (True o False), almacenado como un bit |\n",
